<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7E421F"
    android:orientation="vertical">

    <Button
        android:id="@+id/clearButton"
        android:layout_width="150dp"
        android:layout_height="40sp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_rounding"
        android:text="@string/clear"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="150dp"
        android:layout_height="40sp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_rounding"
        android:text="@string/save"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/tasteInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7D9B4"
        android:textColorHint="#B2F7D9B4"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="#F7D9B4"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tasteText" />

    <EditText
        android:id="@+id/espressoInput"
        android:layout_width="48sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:ems="10"
        android:hint="@string/espressoGrams"
        android:inputType="numberDecimal"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7D9B4"
        android:textColorHint="#B2F7D9B4"
        android:textColorLink="#FFFFFF"
        android:textSize="20sp"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="#F7D9B4"
        app:layout_constraintBottom_toBottomOf="@+id/espressoText"
        app:layout_constraintStart_toEndOf="@+id/espressoText"
        app:layout_constraintTop_toTopOf="@+id/espressoText" />

    <EditText
        android:id="@+id/outputInput"
        android:layout_width="48sp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/outputGrams"
        android:inputType="numberDecimal"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7D9B4"
        android:textColorHint="#B2F7D9B4"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="#F7D9B4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/outputText"
        app:layout_constraintStart_toStartOf="@+id/espressoInput"
        app:layout_constraintTop_toTopOf="@+id/outputText" />

    <EditText
        android:id="@+id/outputInput2"
        android:layout_width="40sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ratioExample2"
        android:inputType="numberDecimal"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7D9B4"
        android:textColorHint="#B2F7D9B4"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="#F7D9B4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/ratioCalc"
        app:layout_constraintStart_toEndOf="@+id/ratioCalc"
        app:layout_constraintTop_toTopOf="@+id/ratioCalc" />

    <EditText
        android:id="@+id/brewTimeInput"
        android:layout_width="35sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/brewTimeHint"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7D9B4"
        android:textColorHint="#B2F7D9B4"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="#F7D9B4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/brewTimeText"
        app:layout_constraintStart_toStartOf="@+id/outputInput"
        app:layout_constraintTop_toTopOf="@+id/brewTimeText" />

    <EditText
        android:id="@+id/grinderInput"
        android:layout_width="35sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:hint="@string/grindHint"
        android:inputType="number"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7D9B4"
        android:textColorHint="#B2F7D9B4"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="#F7D9B4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/grindSettingText"
        app:layout_constraintStart_toEndOf="@+id/grindSettingText"
        app:layout_constraintTop_toTopOf="@+id/grindSettingText" />

    <EditText
        android:id="@+id/runTimeInput"
        android:layout_width="48sp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/runTimeHint"
        android:inputType="numberDecimal"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7D9B4"
        android:textColorHint="#B2F7D9B4"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="#F7D9B4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/runTimeText"
        app:layout_constraintStart_toStartOf="@+id/grinderInput"
        app:layout_constraintTop_toTopOf="@+id/runTimeText" />

    <EditText
        android:id="@+id/originInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:ems="10"
        android:hint="@string/originHint"
        android:inputType="textPersonName"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7D9B4"
        android:textColorHint="#B2F7D9B4"
        android:textColorLink="#FFFFFF"
        android:textCursorDrawable="@drawable/color_cursor"
        android:backgroundTint="#F7D9B4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/originText"
        app:layout_constraintEnd_toEndOf="@+id/outputInput2"
        app:layout_constraintStart_toEndOf="@+id/originText"
        app:layout_constraintTop_toTopOf="@+id/originText" />

    <TextView
        android:id="@+id/recipeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/recipe"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/espressoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/espresso"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipeText" />

    <TextView
        android:id="@+id/outputText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/output"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espressoText" />

    <TextView
        android:id="@+id/grinderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/grinder"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brewTimeText" />

    <TextView
        android:id="@+id/grindSettingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/grindSettings"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grinderText" />

    <TextView
        android:id="@+id/coffeeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/coffee"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/runTimeText" />

    <TextView
        android:id="@+id/tasteText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/taste"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/originText" />

    <TextView
        android:id="@+id/runTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/runTime"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/grindSettingText" />

    <TextView
        android:id="@+id/originText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/origin"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coffeeText"
        app:fontFamily="serif" />

    <TextView
        android:id="@+id/grams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/grams"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/espressoInput"
        app:layout_constraintStart_toEndOf="@+id/espressoInput"
        app:layout_constraintTop_toTopOf="@+id/espressoInput" />

    <TextView
        android:id="@+id/grams2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/grams"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/outputInput"
        app:layout_constraintStart_toEndOf="@+id/outputInput"
        app:layout_constraintTop_toTopOf="@+id/outputInput" />

    <TextView
        android:id="@+id/ratioCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:text="@string/ratioExample"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="serif"
        app:layout_constraintBottom_toTopOf="@+id/grams2"
        app:layout_constraintStart_toEndOf="@+id/grams"
        app:layout_constraintTop_toBottomOf="@+id/grams" />

    <TextView
        android:id="@+id/brewTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/brewTime"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:fontFamily="serif"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outputText" />

    <TextView
        android:id="@+id/seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/seconds"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/brewTimeInput"
        app:layout_constraintStart_toEndOf="@+id/brewTimeInput"
        app:layout_constraintTop_toTopOf="@+id/brewTimeInput" />

    <TextView
        android:id="@+id/seconds2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/seconds"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:fontFamily="serif"
        app:layout_constraintBottom_toBottomOf="@+id/runTimeInput"
        app:layout_constraintStart_toEndOf="@+id/runTimeInput"
        app:layout_constraintTop_toTopOf="@+id/runTimeInput" />

</androidx.constraintlayout.widget.ConstraintLayout>